--- a/src/transformations_test/reports/transformations_test_transformations_doc.Rnw
+++ b/src/transformations_test/reports/transformations_test_transformations_doc.Rnw
@@ -65,6 +65,9 @@ require(splines)
 \subsection{do}
 model selection procedure
 
+\subsection{data checking}
+model selection procedure
+
 \subsection{report}
 
 <<eval=FALSE,echo=TRUE,keep.source=TRUE>>=	
