--- a/Build-an-R-GIS-server.org
+++ b/Build-an-R-GIS-server.org
@@ -105,8 +105,82 @@ service iptables restart
 # need to reboot?
 #+end_src
 might take a little while before your browser can connect, allow a couple of minutes
-** TODO figure out how to run with proxy
-http://rstudio.org/docs/server/running_with_proxy is only for ubuntu?
+* https and running a proxy 
+# http://rstudio.org/docs/server/running_with_proxy is only for ubuntu?
+#+name:install apache
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+yum install httpd.x86_64
+#+end_src
+# run the following interactively
+openssl genrsa -out /etc/pki/tls/private/rstudio.ivan.com.key 1024
+# the next is one line
+openssl req -new -key /etc/pki/tls/private/rstudio.ivan.com.key -x509 -out /etc/pki/tls/certs/rstudio.ivan.com.crt -days 365
+#+name:mod_ssl
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+yum install mod_ssl.x86_64 
+#+end_src
+# NB couldn't follow dave's install here as can't find distcache in lib
+#vi /etc/httpd/conf.d/ssl.conf 
+# vi +/SSLCertificateFile /etc/httpd/conf.d/ssl.conf
+# Change the paths to match where the Key file is stored. 
+SSLCertificateFile /etc/pki/tls/certs/rstudio.ivan.com.crt
+# Then set the correct path for the Certificate Key File a few lines below. 
+SSLCertificateKeyFile /etc/pki/tls/private/rstudio.ivan.com.key
+#+name:makedir
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+mkdir /etc/httpd/sites
+#+end_src
+# vi /etc/httpd/conf/httpd.conf 
+# and add 
+Include /etc/httpd/sites/
+# as the last line.
+# NB did the next in terminal
+# vi /etc/httpd/sites/rstudio-ivan.com
+# in testing below changed this to rstudio.ivan.com
+# insert
+<VirtualHost *:80>
+
+  ServerName rstudio.ivan.com
+  RedirectMatch ^(.*)$ https://rstudio.ivan.com$1
+
+</VirtualHost>
+# goodo
+# vi /etc/httpd/conf.d/ssl.conf
+# add
+
+  <Proxy *>
+    Allow from localhost
+  </Proxy>
+
+  ProxyPass        / http://localhost:8787/
+  ProxyPassReverse / http://localhost:8787/
+
+
+# before </VirtualHost>
+#+name:restart
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+/etc/init.d/httpd restart
+#+end_src
+# vi /etc/sysconfig/iptables 
+# remove the previoslyu added 443 line
+# to the previously added line for 8787 modify to 
+# -A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
+#+name:restart
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+service iptables restart
+#+end_src
+# vi /etc/rstudio/rserver.conf
+ www-address=127.0.0.1
+#+name:rstudio restart
+#+begin_src sh :session *shell* :exports none :eval yes :results silent
+/etc/init.d/rstudio-server restart
+#+end_src
+# now going to https://115.146.93.101/
+# should ask you to add an exception
+# failed?  says 
+# Service Temporarily Unavailable
+# The server is temporarily unable to service your request due to maintenance downtime or capacity problems. Please try again later.
+# Apache/2.2.15 (CentOS) Server at 115.146.93.101 Port 443
 ** test 
 log on to Rstudio at your.new.ip.address and copy the following into a new RNW sweave file (might need to modify the sweave options in tools, something to do with tex2dvi?)
 #+name:learnR
